--- a/style.css
+++ b/style.css
@@ -5,10 +5,62 @@
     font-family: sans-serif;
 }
 
-header {
-    background-color: #505050;
-}
-
 body {
     background-color: #cccccc;
+}
+
+.header {
+    color: #fff;
+    background-color: #505050;
+    text-align: center;
+    height: 350px;
+    margin-bottom: 30px;
+}
+
+h1 {
+    padding: 40px 0 10px 0;
+    font-size: 3rem;
+}
+
+.header p {
+    margin-bottom: 10px;
+    font-size: 2rem;
+}
+
+.header img {
+    border: solid 10px #fff;
+    transform: translateY(70px);
+    width: 245px;
+    border-radius: 50%;
+    box-shadow: 1px 1px 10px #555;
+}
+
+main {
+    background-color: #fafafa;
+    height: 100vh;
+}
+
+.seccion {
+     margin: auto;
+     padding: 150px 100px;
+     height: 350px;
+     width: 90%;
+     box-shadow: 1px 1px 10px #555;
+     text-align: center;
+}
+
+.icons {
+    color: #a1a1a1;
+    font-size: 1.5rem;
+    padding: 20px 0;
+    border: solid thin red;
+}
+
+.icons i {
+    margin: 0 5px;
+}
+
+.seccion article {
+    text-align: center;
+    margin-bottom: 30px;
 }
